gap fix for buttons

--- a/assets/css/movies-page-styles.css
+++ b/assets/css/movies-page-styles.css
@@ -325,6 +325,8 @@ height: 24px;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  gap: 16px;
+  padding-top: 8px;
 }
 
 .add-favorites {
